# qt_wasm

./: CMakeLists.txt  LICENSE  README.md  build_wasm.ps1
scripts/: setup.ps1
src/hello_qt/: CMakeLists.txt
